Bugfix/74 avatar border (#81)
* Changed controller to return suitable data for frontend

* Returned swagger key

* Made rating as mandatory input for CourseCard

* Extracted various avatars to separate components

* Replaced avatars with created components

* Added option of not showing mock avatar

* Update styles.module.sass

--- a/frontend/src/components/Header/UserElement/styles.module.sass
+++ b/frontend/src/components/Header/UserElement/styles.module.sass
@@ -1,16 +1,7 @@
-.imageborder
-    border-radius: 999em
-    width: 75px
-    height: 75px
-    background: linear-gradient(83.47deg, #0084F8 9.02%, #FF8576 90.81%)
-    line-height: 0
-
 .avatar
-    object-fit: cover
-    border-radius: 999em
-    height: 65px
-    width: 65px
-    margin: 5px
+  width: 75px
+  height: 75px
+  cursor: pointer
 
 \:global(.ui.basic.label).toolbarBtn
   border: none
